work with random

--- a/network/network_analysis.ipynb
+++ b/network/network_analysis.ipynb
@@ -59,7 +59,7 @@
       "outputs": [],
       "source": [
         "G = nx.DiGraph()\n",
-        "G = nx.read_edgelist(PATH + \"network.csv\", delimiter=\",\", nodetype=int, data=(('weight', float),), create_using=nx.DiGraph())"
+        "G = nx.read_edgelist(PATH + \"real_network.csv\", delimiter=\",\", nodetype=int, data=(('weight', float),), create_using=nx.DiGraph())"
       ]
     },
     {
@@ -79,7 +79,7 @@
           "output_type": "stream",
           "text": [
             "Number of nodes: 677640\n",
-            "Number of edges: 834421\n"
+            "Number of edges: 834432\n"
           ]
         }
       ],
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "04145728",
       "metadata": {},
       "outputs": [
@@ -103,7 +103,7 @@
               "1.8171614879550778e-06"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "0g3kvSwbftRN",
       "metadata": {
         "colab": {
@@ -160,8 +160,8 @@
               "      <td>39364684</td>\n",
               "      <td>1</td>\n",
               "      <td>206</td>\n",
-              "      <td>0.001174</td>\n",
-              "      <td>1.926011e-14</td>\n",
+              "      <td>0.001173</td>\n",
+              "      <td>1.925743e-14</td>\n",
               "      <td>0.000001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -169,8 +169,8 @@
               "      <td>21061006</td>\n",
               "      <td>3</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001398</td>\n",
-              "      <td>3.852239e-14</td>\n",
+              "      <td>0.001400</td>\n",
+              "      <td>6.756681e-11</td>\n",
               "      <td>0.000003</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -178,8 +178,8 @@
               "      <td>18513522</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -187,8 +187,8 @@
               "      <td>38251731</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -196,8 +196,8 @@
               "      <td>22369434</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -206,14 +206,14 @@
             ],
             "text/plain": [
               "       node  in_degree  out_degree      katz   eigenvector  pagerank\n",
-              "0  39364684          1         206  0.001174  1.926011e-14  0.000001\n",
-              "1  21061006          3           0  0.001398  3.852239e-14  0.000003\n",
-              "2  18513522          1           0  0.001163  1.925995e-14  0.000001\n",
-              "3  38251731          1           0  0.001163  1.925995e-14  0.000001\n",
-              "4  22369434          1           0  0.001163  1.925995e-14  0.000001"
+              "0  39364684          1         206  0.001173  1.925743e-14  0.000001\n",
+              "1  21061006          3           0  0.001400  6.756681e-11  0.000003\n",
+              "2  18513522          1           0  0.001162  1.925727e-14  0.000001\n",
+              "3  38251731          1           0  0.001162  1.925727e-14  0.000001\n",
+              "4  22369434          1           0  0.001162  1.925727e-14  0.000001"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "dDv8Mphn2WxY",
       "metadata": {
         "colab": {
@@ -333,13 +333,13 @@
               "4  39364684  98928660    1.40"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "df = pd.read_csv(PATH + \"network.csv\", header = None)\n",
+        "df = pd.read_csv(PATH + \"real_network.csv\", header = None)\n",
         "df.columns = ['source','target', 'weight']\n",
         "df[\"weight\"] = df[\"weight\"].apply(lambda x: 0.0001 if x <= 0 else x)\n",
         "\n",
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "nlIfmDGe2cQv",
       "metadata": {
         "id": "nlIfmDGe2cQv"
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "id": "Vjq396UO8SBr",
       "metadata": {
         "colab": {
@@ -436,7 +436,7 @@
               "4  22369434          0.0"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "id": "Rvx4akKV91tL",
       "metadata": {
         "colab": {
@@ -506,8 +506,8 @@
               "      <td>39364684</td>\n",
               "      <td>1</td>\n",
               "      <td>206</td>\n",
-              "      <td>0.001174</td>\n",
-              "      <td>1.926011e-14</td>\n",
+              "      <td>0.001173</td>\n",
+              "      <td>1.925743e-14</td>\n",
               "      <td>0.000001</td>\n",
               "      <td>742.0</td>\n",
               "    </tr>\n",
@@ -516,8 +516,8 @@
               "      <td>21061006</td>\n",
               "      <td>3</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001398</td>\n",
-              "      <td>3.852239e-14</td>\n",
+              "      <td>0.001400</td>\n",
+              "      <td>6.756681e-11</td>\n",
               "      <td>0.000003</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -526,8 +526,8 @@
               "      <td>18513522</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -536,8 +536,8 @@
               "      <td>38251731</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -546,8 +546,8 @@
               "      <td>22369434</td>\n",
               "      <td>1</td>\n",
               "      <td>0</td>\n",
-              "      <td>0.001163</td>\n",
-              "      <td>1.925995e-14</td>\n",
+              "      <td>0.001162</td>\n",
+              "      <td>1.925727e-14</td>\n",
               "      <td>0.000001</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -557,11 +557,11 @@
             ],
             "text/plain": [
               "       node  in_degree  out_degree      katz   eigenvector  pagerank  \\\n",
-              "0  39364684          1         206  0.001174  1.926011e-14  0.000001   \n",
-              "1  21061006          3           0  0.001398  3.852239e-14  0.000003   \n",
-              "2  18513522          1           0  0.001163  1.925995e-14  0.000001   \n",
-              "3  38251731          1           0  0.001163  1.925995e-14  0.000001   \n",
-              "4  22369434          1           0  0.001163  1.925995e-14  0.000001   \n",
+              "0  39364684          1         206  0.001173  1.925743e-14  0.000001   \n",
+              "1  21061006          3           0  0.001400  6.756681e-11  0.000003   \n",
+              "2  18513522          1           0  0.001162  1.925727e-14  0.000001   \n",
+              "3  38251731          1           0  0.001162  1.925727e-14  0.000001   \n",
+              "4  22369434          1           0  0.001162  1.925727e-14  0.000001   \n",
               "\n",
               "   betweenness  \n",
               "0        742.0  \n",
@@ -571,7 +571,7 @@
               "4          0.0  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -583,7 +583,159 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
+      "id": "af66a9b8",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>node</th>\n",
+              "      <th>in_degree</th>\n",
+              "      <th>out_degree</th>\n",
+              "      <th>katz</th>\n",
+              "      <th>eigenvector</th>\n",
+              "      <th>pagerank</th>\n",
+              "      <th>betweenness</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>6.776400e+05</td>\n",
+              "      <td>677640.000000</td>\n",
+              "      <td>677640.000000</td>\n",
+              "      <td>677640.000000</td>\n",
+              "      <td>6.776400e+05</td>\n",
+              "      <td>6.776400e+05</td>\n",
+              "      <td>6.776400e+05</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1.010980e+16</td>\n",
+              "      <td>1.231379</td>\n",
+              "      <td>1.231379</td>\n",
+              "      <td>0.001207</td>\n",
+              "      <td>7.284969e-05</td>\n",
+              "      <td>1.475710e-06</td>\n",
+              "      <td>1.905337e+04</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>8.561247e+16</td>\n",
+              "      <td>0.856394</td>\n",
+              "      <td>92.302353</td>\n",
+              "      <td>0.000140</td>\n",
+              "      <td>1.212603e-03</td>\n",
+              "      <td>8.591826e-07</td>\n",
+              "      <td>1.802217e+06</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>5.700000e+01</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.001045</td>\n",
+              "      <td>5.739166e-22</td>\n",
+              "      <td>-3.712248e-04</td>\n",
+              "      <td>0.000000e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>1.462378e+08</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.001150</td>\n",
+              "      <td>1.434792e-20</td>\n",
+              "      <td>1.317094e-06</td>\n",
+              "      <td>0.000000e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>4.543826e+08</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.001163</td>\n",
+              "      <td>9.628723e-15</td>\n",
+              "      <td>1.317257e-06</td>\n",
+              "      <td>0.000000e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>1.714993e+09</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.001195</td>\n",
+              "      <td>1.327581e-08</td>\n",
+              "      <td>1.322488e-06</td>\n",
+              "      <td>0.000000e+00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>7.884893e+17</td>\n",
+              "      <td>94.000000</td>\n",
+              "      <td>35379.000000</td>\n",
+              "      <td>0.013551</td>\n",
+              "      <td>2.493019e-01</td>\n",
+              "      <td>3.751144e-04</td>\n",
+              "      <td>3.755521e+08</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               node      in_degree     out_degree           katz  \\\n",
+              "count  6.776400e+05  677640.000000  677640.000000  677640.000000   \n",
+              "mean   1.010980e+16       1.231379       1.231379       0.001207   \n",
+              "std    8.561247e+16       0.856394      92.302353       0.000140   \n",
+              "min    5.700000e+01       0.000000       0.000000       0.001045   \n",
+              "25%    1.462378e+08       1.000000       0.000000       0.001150   \n",
+              "50%    4.543826e+08       1.000000       0.000000       0.001163   \n",
+              "75%    1.714993e+09       1.000000       0.000000       0.001195   \n",
+              "max    7.884893e+17      94.000000   35379.000000       0.013551   \n",
+              "\n",
+              "        eigenvector      pagerank   betweenness  \n",
+              "count  6.776400e+05  6.776400e+05  6.776400e+05  \n",
+              "mean   7.284969e-05  1.475710e-06  1.905337e+04  \n",
+              "std    1.212603e-03  8.591826e-07  1.802217e+06  \n",
+              "min    5.739166e-22 -3.712248e-04  0.000000e+00  \n",
+              "25%    1.434792e-20  1.317094e-06  0.000000e+00  \n",
+              "50%    9.628723e-15  1.317257e-06  0.000000e+00  \n",
+              "75%    1.327581e-08  1.322488e-06  0.000000e+00  \n",
+              "max    2.493019e-01  3.751144e-04  3.755521e+08  "
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "metrics_df.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "id": "5b72e8f4",
       "metadata": {},
       "outputs": [],
