--- a/network/node_selection.ipynb
+++ b/network/node_selection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bce387bd",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f51605e9",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "Removed zero embeddings:\n",
-      "Nodes remaining = 19429/677640\n"
+      "Nodes remaining = 19429/19429\n"
      ]
     }
    ],
@@ -76,12 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c6c41294",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_node_features(emb_df, features_file = 'node_features.csv'):\n",
+    "def add_node_features(emb_df, features_file = 'real_node_features.csv'):\n",
     "    nodes_df = pd.read_csv(PATH + features_file)\n",
     "    node_columns = nodes_df.columns.tolist()\n",
     "    node_columns.remove('user_id')\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "e3728d82",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "348926c1",
    "metadata": {},
    "outputs": [
@@ -466,28 +466,51 @@
      "output_type": "stream",
      "text": [
       "Removed zero embeddings:\n",
-      "Nodes remaining = 9331/677640\n"
+      "Nodes remaining = 513295/677640\n"
      ]
     }
    ],
    "source": [
-    "dummy_df = pd.read_csv(PATH + 'node_embeddings_same_dist.csv')\n",
+    "dummy_df = pd.read_csv(PATH + 'dummy_node_embeddings.csv')\n",
     "dummy_df = remove_zero_attn(dummy_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 79,
+   "id": "49f1f1fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "dummy_df['embedding_norm'] = np.linalg.norm(dummy_df.values, axis=1)\n",
+    "\n",
+    "dummy_df = dummy_df.sort_values(by='embedding_norm', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "492b0aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_df = add_node_features(dummy_df, 'dummy_node_features.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "id": "b2f77211",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2281"
+       "4360"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "id": "0df2bb8a",
    "metadata": {},
    "outputs": [],
@@ -518,36 +541,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 87,
    "id": "014e5ae7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(677640, 21)"
+       "(677640, 15)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dummy_df = pd.read_csv(PATH + 'node_features.csv')\n",
-    "dummy_df = add_node_metrics(dummy_df)\n",
+    "dummy_df = pd.read_csv(PATH + 'dummy_node_features.csv')\n",
+    "dummy_df[\"betweenness\"] = 0.0 # dummy, it is not used\n",
     "dummy_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
    "id": "925282eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_df = remove_harmful_baseline(dummy_df, 9331)\n",
-    "df['user_id'].to_csv('network/nodes_to_remove/dummy_baseline.txt', index=False, header=False)"
+    "dummy_df = remove_harmful_baseline(dummy_df, 4360, alpha=0)\n",
+    "dummy_df['user_id'].to_csv('network/nodes_to_remove/dummy_baseline_only_score.txt', index=False, header=False)"
    ]
   }
  ],
