--- a/network/node_selection.ipynb
+++ b/network/node_selection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bce387bd",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f51605e9",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c6c41294",
    "metadata": {},
    "outputs": [],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "e3728d82",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 57,
    "id": "348926c1",
    "metadata": {},
    "outputs": [
@@ -466,18 +466,18 @@
      "output_type": "stream",
      "text": [
       "Removed zero embeddings:\n",
-      "Nodes remaining = 513295/677640\n"
+      "Nodes remaining = 62836/100000\n"
      ]
     }
    ],
    "source": [
-    "dummy_df = pd.read_csv(PATH + 'dummy_node_embeddings.csv')\n",
+    "dummy_df = pd.read_csv(PATH + 'random_node_embeddings.csv')\n",
     "dummy_df = remove_zero_attn(dummy_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 56,
    "id": "49f1f1fb",
    "metadata": {},
    "outputs": [],
@@ -490,27 +490,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "id": "492b0aa8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_df = add_node_features(dummy_df, 'dummy_node_features.csv')"
+    "dummy_df = add_node_features(dummy_df, 'random_node_features.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 59,
    "id": "b2f77211",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4360"
+       "14991"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,13 +522,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 61,
    "id": "0df2bb8a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_to_remove = df_to_remove.sort_values(by=\"score\", ascending=True)\n",
-    "df_to_remove['user_id'].to_csv('network/nodes_to_remove/dummy_gate_sorted.txt', index=False, header=False)"
+    "df_to_remove['user_id'].to_csv('network/nodes_to_remove/random_gate_sorted.txt', index=False, header=False)"
    ]
   },
   {
@@ -541,36 +541,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 62,
    "id": "014e5ae7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(677640, 15)"
+       "(100000, 15)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dummy_df = pd.read_csv(PATH + 'dummy_node_features.csv')\n",
+    "dummy_df = pd.read_csv(PATH + 'random_node_features.csv')\n",
     "dummy_df[\"betweenness\"] = 0.0 # dummy, it is not used\n",
     "dummy_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 63,
    "id": "925282eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_df = remove_harmful_baseline(dummy_df, 4360, alpha=0)\n",
-    "dummy_df['user_id'].to_csv('network/nodes_to_remove/dummy_baseline_only_score.txt', index=False, header=False)"
+    "dummy_df = remove_harmful_baseline(dummy_df, 14991, alpha=0)\n",
+    "dummy_df['user_id'].to_csv('network/nodes_to_remove/random_baseline_only_score.txt', index=False, header=False)"
    ]
   }
  ],
